<resources>
    <string name="app_name">FSalon</string>
    <string name="action_create">Create Account</string>
    <string name="action_login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_birth">Date of Birth</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re-enter Password</string>
    <string name="msg_member">Already a member?</string>
    <string name="tile_fsalon">FSalon</string>
    <string name="title_remember_me">Remember Me</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="title_phone">Phone</string>
    <string name="title_phone_or_email">Phone or Email</string>
    <string name="title_pass_word">Pass Word</string>
    <string name="title_slash">\t/\t</string>
    <string name="title_name">Name</string>
    <string name="title_stylist">Stylist</string>
    <string name="title_salon">Salon</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_register">Register</string>
    <string name="msg_error_empty">Text Must not Empty!</string>
    <string name="msg_login_success">Login Success</string>
    <string name="title_info">Info</string>
    <string name="title_book">Book</string>
    <string name="title_date">Date</string>
    <string name="title_time">Time</string>
    <string name="action_close">Close</string>
    <string name="title_dash">-</string>
    <string name="title_today">Today</string>
    <string name="title_tomorrow">Tomorrow</string>
    <string name="title_after_tomorrow">After Tomorrow</string>
    <string name="title_history">History</string>
    <string name="title_detail">Detail</string>
    <string name="title_scheduler">Scheduler</string>
    <string name="title_customer">Customer</string>
    <string name="title_receipt">Bill</string>
    <string name="title_report">Report</string>
    <string name="title_profile">Profile</string>
    <string name="msg_book_success">Book Success</string>
    <string name="msg_pls_select_time">Please Select The Time Below</string>
    <string name="msg_pls_select_salon">Please Select The Salon Below</string>
    <string name="top_sheet_behavior" translatable="false">com.framgia.fsalon.wiget.TopSheetBehavior</string>
    <string name="action_pick_date">Pick date</string>
    <string name="title_success">Booking Success</string>
    <string name="title_congrat">Congratulations</string>
    <string name="msg_success_booking">You have successfully booked with these informations</string>
    <string name="action_ok">OK</string>
    <string name="title_yesterday">Yesterday</string>
    <string name="title_call">Call</string>
    <string name="title_message">Message</string>
    <string name="title_next_service">Next service:</string>
    <string name="title_service_time">Service time:</string>
    <string name="tile_service">Service:</string>
    <string name="title_booking_method">Booking method:</string>
    <string name="title_note">Note</string>
    <string name="title_scheduler_failure">Have some error, please try again !!!</string>
    <string name="tilte_finished">Finished</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_waiting">Waiting</string>
    <string name="msg_no_booking">You have no booking yet</string>
    <string name="title_booking_id">Booking ID</string>
    <string name="action_search">Search</string>
    <string name="title_customer_name">Customer Name</string>
    <string name="title_customer_phone">Customer Phone</string>
    <string name="title_service">Service</string>
    <string name="title_price">Price</string>
    <string name="title_number">Number</string>
    <string name="title_add">Add</string>
    <string name="title_create">Create</string>
    <string name="action_x">x</string>
    <string name="title_sales">Sales</string>
    <string name="title_customers">Customers</string>
    <string name="title_bills">Bills</string>
    <string name="title_bill_total_demo">InCome ToDay</string>
    <string name="title_bill_statistical">Sales Statistical</string>
    <string name="title_bill_demo">250.000$</string>
    <string name="msg_error_form">Please enter full information in the form at the side</string>
    <string name="msg_error_phone">Please enter the phone number</string>
    <string name="title_space_time">Space time</string>
    <string name="title_end_date">End date</string>
    <string name="title_select_date">Select date</string>
    <string name="title_select_start_day">Start date</string>
    <string name="title_select_end_day">End date</string>
    <string name="title_skip_login">Skip Login</string>
    <string name="title_edit_detail">Edit</string>
    <string name="action_logout">Logout</string>
    <string name="msg_not_booking">You still not booking yet</string>
    <string name="title_na">N/A</string>
    <string name="msg_book_to_edit">You can book again to edit your last booking</string>
    <string name="title_canceled">Canceled</string>
    <string name="title_in_late">In Late</string>
    <string name="title_booking_detail">Booking Detail</string>
    <string name="title_status">Status</string>
    <string name="msg_call">We need permission to start call</string>
    <string name="msg_no_permission">No permission</string>
    <string name="msg_edit_success">You have successfully edit this booking</string>
    <string name="msg_cant_find_date">Can\'t find booking day</string>
    <string name="title_information">Information</string>
    <string name="title_bill_detail">Bill Detail</string>
    <string name="msg_open_drawer">open</string>
    <string name="msg_close_drawer">close</string>
    <string name="title_pending">Pending</string>
    <string name="title_completed">Completed</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="title_total_old">Total Old</string>
    <string name="title_total_new">Total New</string>
    <string name="title_average">Average</string>
    <string name="title_customer_old">Old</string>
    <string name="title_customer_new">New</string>
    <string name="title_in_progress">In Progress</string>
    <string name="title_no_salon">No Salon</string>
    <string name="action_change">Change</string>
    <string name="action_change_status">Change Status</string>
    <string name="title_pick_image">pick image</string>
    <string name="msg_request_read_camera">Please grant permission open camera permission  to
        make an image</string>
    <string name="action_agree">AGREE</string>
    <string name="action_dis_agree">DIS AGREE</string>
    <string name="action_add_photo">Add Photo</string>
    <string name="title_side_left_photo">Left</string>
    <string name="title_side_right_photo">Right</string>
    <string name="title_side_behind_photo">Behind</string>
    <string name="title_side_front_up_photo">Front up</string>
    <string name="title_bill_label">Sale amount</string>
    <string name="title_bill_description">Bill</string>
    <string name="title_total">Total</string>
    <string name="msg_request_write_file">Write list device using</string>
    <string name="title_update_photo"><![CDATA[Update Photo >>]]></string>
    <string name="msg_error_enough_photos">Please make enough photos !!!</string>
    <string name="msg_add_photo_sucessfully">You have added photos sucessfully !!!</string>
    <string name="msg_error_add_photo">Some error occured, Sorry about that :\'(</string>
</resources>
