<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.fsalon.screen.report.reportsales.ReportSalesViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:text="@string/title_bill_total_demo"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_30"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingEnd="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:text="@string/title_bill_demo"
                android:textColor="@color/color_red"
                android:textSize="@dimen/sp_60"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center"
                android:background="@drawable/bg_report_selected"
                android:gravity="center"
                android:text="@string/title_bill_statistical"
                android:textColor="@color/color_white"
                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bind:lineChartData="@{viewModel.lineData}"
                />
        </LinearLayout>
    </LinearLayout>
</layout>
