<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.support.v4.widget.DrawerLayout"/>

        <import type="com.framgia.fsalon.utils.LayoutManager"/>

        <variable
            name="viewModel"
            type="com.framgia.fsalon.screen.listbill.ListBillViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            bind:activity="@{viewModel.activity}"
            bind:drawerListener="@{viewModel.drawerListener}"
            bind:lockMode="@{DrawerLayout.LOCK_MODE_LOCKED_CLOSED}"
            >

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginStart="@dimen/dp_10"
                        android:onClick="@{()-> viewModel.onFilterClick(drawerLayout)}"
                        android:padding="@dimen/dp_10"
                        app:srcCompat="@drawable/ic_filter_30dp"
                        tools:ignore="ContentDescription"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_weight="1"
                        android:text="@{viewModel.titleFragment}"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold"/>
                </LinearLayout>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:visibility="@{viewModel.visibleProgressBar}">

                </ProgressBar>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:background="@color/color_grey_100"
                    bind:deviderItem="@{@integer/div_1}"
                    bind:layoutManager="@{viewModel.layoutManager}"
                    bind:recyclerAdapter="@{viewModel.adapter}"/>

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/dp_16"
                    android:onClick="@{() -> viewModel.onCreateBillClick()}"
                    android:src="@drawable/fab_add"
                    app:fabSize="normal"
                    />

            </android.support.design.widget.CoordinatorLayout>


            <android.support.design.widget.NavigationView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/color_white"
                app:headerLayout="@layout/navigation_header_bill">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_100">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingEnd="@dimen/dp_10"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingRight="@dimen/dp_10"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingTop="@dimen/dp_5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_customer"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp_15"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                app:srcCompat="@drawable/ic_short_hair_24dp"
                                tools:ignore="ContentDescription"/>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingEnd="@dimen/dp_8"
                                android:paddingStart="@dimen/dp_8"
                                bind:errorText="@{viewModel.customerNameError}">

                                <EditText
                                    android:layout_width="302dp"
                                    android:layout_height="37dp"
                                    android:hint="@string/title_customer_name"
                                    android:inputType="number"
                                    android:text="@={viewModel.customer.name}"
                                    android:textSize="@dimen/sp_12"/>
                            </android.support.design.widget.TextInputLayout>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="@dimen/dp_10"
                                android:layout_marginRight="@dimen/dp_10"
                                android:contentDescription="@null"
                                app:srcCompat="@drawable/ic_search_24dp"
                                tools:ignore="ContentDescription"/>
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_grey_400"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mdtp_date"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp_15"/>

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            bind:changeListener="@{viewModel.changeListener}"
                            bind:check="@{viewModel.radioButtonId}">

                            <RadioButton
                                android:id="@+id/filter_today"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dp_10"
                                android:text="@string/title_today"/>

                            <RadioButton
                                android:id="@+id/filter_yesterday"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dp_10"
                                android:text="@string/title_yesterday"/>

                            <RadioButton
                                android:id="@+id/filter_tomorrow"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dp_10"
                                android:text="@string/title_tomorrow"/>

                            <RadioButton
                                android:id="@+id/filter_space_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> viewModel.onSpaceTimeClick()}"
                                android:padding="@dimen/dp_10"
                                android:text="@string/title_space_time"/>

                            <RadioButton
                                android:id="@+id/filter_select_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> viewModel.onSelectDateClick()}"
                                android:padding="@dimen/dp_10"
                                android:text="@string/title_select_date"/>
                        </RadioGroup>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_grey_400"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_status"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp_15"/>

                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.waiting}"
                            android:padding="@dimen/dp_10"
                            android:text="@string/title_waiting"/>

                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.completed}"
                            android:padding="@dimen/dp_10"
                            android:text="@string/title_completed"/>

                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.canceled}"
                            android:padding="@dimen/dp_10"
                            android:text="@string/title_canceled"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_grey_400"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_salon"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp_15"/>

                        <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            bind:adapter="@{viewModel.departmentAdapter}"
                            bind:layoutManager="@{LayoutManager.linear()}"/>
                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>
            </android.support.design.widget.NavigationView>
        </android.support.v4.widget.DrawerLayout>
    </LinearLayout>
</layout>
