<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:car_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.fsalon.screen.success.SuccessViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dp_5"
            car_view:cardElevation="@dimen/dp1"
            tools:cardCornerRadius="@dimen/dp_2"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_12"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_20"
                android:paddingLeft="@dimen/dp_30"
                android:paddingRight="@dimen/dp_20"
                android:paddingStart="@dimen/dp_30"
                android:paddingTop="@dimen/dp_12">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/msg_book_success"
                    android:scaleType="fitCenter"
                    bind:srcCompat="@drawable/ic_success"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp_5"
                    android:text="@{viewModel.bookingOder.department.address}"
                    android:textColor="@color/color_teal_500"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold|italic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:text="@{viewModel.bookingOder.render.day}"
                    android:textColor="@color/color_teal_500"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold|italic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:text="@{viewModel.bookingOder.render.timeStart}"
                    android:textColor="@color/color_teal_500"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold|italic"/>

                <include
                    layout="@layout/textview_underline"
                    bind:text="@{viewModel.bookingOder.phone}"
                    bind:title="@{@string/title_phone}"
                    />

                <include
                    layout="@layout/textview_underline"
                    bind:text="@{viewModel.bookingOder.department.name}"
                    bind:title="@{@string/title_salon}"
                    />

                <include
                    layout="@layout/textview_underline"
                    bind:text="@{viewModel.bookingOder.stylist.name}"
                    bind:title="@{@string/title_stylist}"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/msg_success_booking"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_12"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/msg_book_to_edit"
            android:textSize="@dimen/sp_10"
            android:textStyle="italic"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="@{viewModel::onOkClick}"
            android:text="@string/action_ok"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18"/>
    </LinearLayout>
</layout>
